--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h1>Im <span>Alejandro</span> Martinez</h1>
           <p>
             Informático con ansias de crecer constantemente de manera individual a nivel profesional y humano desempeñando de la mejor manera mis labores. Busco un lugar donde desempeñar mis actuales conocimientos como programador y mejorarlos de manera activa. Poseo una alta capacidad de resiliencia, soy autodidacta y proactivo, vivo con una necesidad de aprender algo nuevo frecuentemente, de esta forma puedo ser mas creativo al determinar la solución a algún problema.  <br />
-            <a download href="/Taller final/portafolio2/assets/CV Alejandro Martinez dev.docx"
+            <a download href="portafolio2/assets/CV Alejandro Martinez dev.docx"
               ><button class="download">Download CV</button></a
             >
           </p>
@@ -83,16 +83,16 @@
       <div class="portfolio_cont">
         <h2 class="acordeon">JAVA</h2>
         <div class="panelindex">
-          <a href="./java/javataller1.html"
+          <a href="portafolio2/java/javataller1.html"
             ><p class="panel__casilla">Taller 1</p></a
           >
-          <a href="./java/javataller2.html"
+          <a href="portafolio2/java/javataller2.html"
             ><p class="panel__casilla">Taller 2</p></a
           >
-          <a href="./java/javataller3.htmls"
+          <a href="portafolio2/java/javataller3.htmls"
             ><p class="panel__casilla">Taller 3</p></a
           >
-          <a href="./java/javataller4.html"
+          <a href="portafolio2/java/javataller4.html"
             ><p class="panel__casilla">Taller 4</p></a
           >
         </div>
