--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </main>
     </div>
     <div class="about" id="abouthere">
-      <img src="../portafolio/Foto CV_preview_rev_1.png" alt="yo" />
+      <img src="portafolio2/Foto CV_preview_rev_1.png" alt="yo" />
       <div class="about-info">
         <h2 class="aboutme" id="aboutmee">About me</h2>
         <div class="divider"></div>
@@ -98,6 +98,6 @@
         </div>
       </div>
     </div>
-    <script src="backiframe.js"></script>
+    <script src="portafolio2/backiframe.js"></script>
   </body>
 </html>
