--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             >
           </p>
         </div>
-        <img src="./Foto CV_preview_rev_1.png" alt="" />
+        <img src="portafolio2/Foto CV_preview_rev_1.png" alt="" />
       </main>
     </div>
     <div class="about" id="abouthere">
@@ -63,19 +63,19 @@
       <div class="portfolio_cont">
         <h2 class="acordeon">PSEINT</h2>
         <div class="panelindex">
-          <a href="pseinttaller1.html"
+          <a href="portafolio2/pseinttaller1.html"
             ><p class="panel__casilla">Taller 1</p></a
           >
-          <a href="pseinttaller2.html"
+          <a href="portafolio2/pseinttaller2.html"
             ><p class="panel__casilla">Taller 2</p></a
           >
-          <a href="pseinttaller3.html"
+          <a href="portafolio2/pseinttaller3.html"
             ><p class="panel__casilla">Taller 3</p></a
           >
-          <a href="pseinttaller4.html"
+          <a href="portafolio2/pseinttaller4.html"
             ><p class="panel__casilla">Taller 4</p></a
           >
-          <a href="pseinttaller5.html"
+          <a href="portafolio2/pseinttaller5.html"
             ><p class="panel__casilla">Taller 5</p></a
           >
         </div>
