--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           Tengo solo unos meses aprendiendo y escribiendo codigo de forma activa, actualmente dedico al menos 4 horas diarias a aprender Javascript y bases de datos relacionales, mi objetivo es ser un desarrollador backend, tambien tengo algunos conocimientos basicos en python y en un futuro me gustaria aprenderlo a mayor profundidad, considero que debo tener un conocimiento matematico mas avanzado y practico para ello.
 
         </p>
-        <button class="download"><a href="/Taller final/Taller Javascript/CVplus.html">Read more</a></button>
+        <button class="download"><a href="Taller Javascript/CVplus.html">Read more</a></button>
       </div>
     </div>
 
