--- a/portafolio2/index.html
+++ b/portafolio2/index.html
@@ -89,7 +89,7 @@
           <a href="./java/javataller2.html"
             ><p class="panel__casilla">Taller 2</p></a
           >
-          <a href="./java/javataller3.htmls"
+          <a href="./java/javataller3.html"
             ><p class="panel__casilla">Taller 3</p></a
           >
           <a href="./java/javataller4.html"
