--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a href="portafolio2/java/javataller2.html"
             ><p class="panel__casilla">Taller 2</p></a
           >
-          <a href="portafolio2/java/javataller3.htmls"
+          <a href="portafolio2/java/javataller3.html"
             ><p class="panel__casilla">Taller 3</p></a
           >
           <a href="portafolio2/java/javataller4.html"
