--- a/portafolio2/pseinttaller1.html
+++ b/portafolio2/pseinttaller1.html
@@ -21,7 +21,7 @@
             <h2>Portafolio <span>Alejandro Martinez</span></h2>
           </div>
           <ul class="menu">
-            <li><a class="active" href="index.html">Home</a></li>
+            <li><a class="active" href="/index.html">Home</a></li>
             <li>
               <a
                 class="active"
